:lock: Em desenvolvimento

--- a/index.html
+++ b/index.html
@@ -11,18 +11,23 @@
 <body>
     <div id="container">
         <div class="parent">
-            <div id="sort1" class="div1"><img src="" alt="Imagem 1"></div>
-            <div id="sort2" class="div2"><img src="" alt="Imagem 2"></div>
-            <div id="sort3" class="div3"><img src="" alt="Imagem 3"></div>
-            <div id="sort4" class="div4"><img src="" alt="Imagem 4"></div>
-            <div id="sort5" class="div5"><img src="" alt="Imagem 5"></div>
-            <div id="sort6" class="div6"><img src="" alt="Imagem 6"></div>
-            <div id="sort7" class="div7"><img src="" alt="Imagem 7"></div>
-            <div id="sort8" class="div8"><img src="" alt="Imagem 8"></div>
-            <div id="sort9" class="div9"><img src="" alt="Imagem 9"></div>
+            <div id="sort1" class="div1"><img src="./assets/ouro.png" alt="Imagem 1"></div>
+            <div id="sort2" class="div2"><img src="./assets/xerife.png" alt="Imagem 2"></div>
+            <div id="sort3" class="div3"><img src="./assets/bandido.png" alt="Imagem 3"></div>
+            <div id="sort4" class="div4"><img src="./assets/revolver.png" alt="Imagem 4"></div>
+            <div id="sort5" class="div5"><img src="./assets/dinamite.png" alt="Imagem 5"></div>
+            <div id="sort6" class="div6"><img src="./assets/cacto.png" alt="Imagem 6"></div>
+            <div id="sort7" class="div7"><img src="./assets/ouro.png" alt="Imagem 7"></div>
+            <div id="sort8" class="div8"><img src="./assets/xerife.png" alt="Imagem 8"></div>
+            <div id="sort9" class="div9"><img src="./assets/bandido.png" alt="Imagem 9"></div>
         </div>
+    </div>
+    <div id="account">
+        <h2>SALDO: <span id="saldo" value="1000">1000</span></h2>
+        <h2>APOSTA: <span id="aposta" value="100">100</span></h2>
+        <button id="sortearBtn">Sortear</button>
     </div>
     <script src="main.js"></script>
 </body>
 
-</html>
+</html> 
