--- a/index.html
+++ b/index.html
@@ -23,11 +23,17 @@
         </div>
     </div>
     <div id="account">
-        <h2>SALDO: <span id="saldo" value="1000">1000</span></h2>
-        <h2>APOSTA: <span id="aposta" value="100">100</span></h2>
-        <button id="sortearBtn">Sortear</button>
+        <h2>SALDO: <span id="saldo">1000</span></h2>
+        <div id="btns">
+            <button id="sortearBtn">Apostar</button>
+            <div class="plusminus">
+                <button id="aumentarBtn">+</button>
+                <button id="diminuirBtn">-</button>
+            </div>
+        </div>
+        <h2>APOSTA: <span id="aposta">100</span></h2>
     </div>
     <script src="main.js"></script>
 </body>
 
-</html> 
+</html>
