:tada: Projeto Cassino

--- a/index.html
+++ b/index.html
@@ -23,15 +23,18 @@
         </div>
     </div>
     <div id="account">
-        <h2>SALDO: <span id="saldo">1000</span></h2>
-        <div id="btns">
+        <div class="info">
+            <h2>SALDO: R$<span id="saldo">1000</span></h2>
+            <h2>APOSTA: R$<span id="aposta">100</span></h2>
+            <h2>PRÊMIO: R$<span id="prize">0</span></h2>
+        </div>
+        <div class="btns">
             <button id="sortearBtn">Apostar</button>
             <div class="plusminus">
                 <button id="aumentarBtn">+</button>
                 <button id="diminuirBtn">-</button>
             </div>
         </div>
-        <h2>APOSTA: <span id="aposta">100</span></h2>
     </div>
     <script src="main.js"></script>
 </body>
